# wordl

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix  rustmft.toml
.github/workflows/: deploy.yml  prod.yml  test.yml
frontend/: Cargo.toml  Trunk.toml  flake.nix  index.html  input.css  package-lock.json  package.json  tailwind.config.js
frontend/assets/: styles.css  wordlist.txt
frontend/public/: styles.css
frontend/src/: input.rs  lib.rs  main.rs  pages.rs  router.rs  storage.rs
frontend/src/pages/: game.rs  home.rs  home_old.rs  mod.rs  settings.rs
src/: lib.rs  main.rs
src/model/: charstatus.rs  game.rs  mod.rs
