[package]
name = "wordl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
http = "1.1.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "cors", "fs"] }
tracing = "0.1.40"


[workspace]
members = [".", "frontend"]
