[package]
name = "wordl-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = {version="0.3.69", features = ["HtmlInputElement"]}
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0"}
gloo-console = "0.3.0"
yewdux = "0.10.0"
serde = "1.0.198"
serde_json = "1.0.116"
regex = "1.10.4"
