[package]
name = "wordl-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.70", features = [
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
wasm-bindgen-futures = "0.4.43"
wasm-bindgen = "0.2.93"
yewdux = "0.10.0"
gloo-net = "0.6.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
rand = "0.8.5"
